--- a/index.html
+++ b/index.html
@@ -6615,7 +6615,7 @@
                 width: 100%;
                 overflow: hidden;
                 padding: max(60px, 10vh) 0;
-                background-color: rgb(var(--light-black));
+                background-color: black;
               }
               .css-nh1dzl.margin-top-s-pos {
                 margin-block-start: var(--s-h-space);
