--- a/index.html
+++ b/index.html
@@ -1932,7 +1932,7 @@
 
                     </style>
                     <a
-                      href="https://dexscreener.com/ethereum/0x6436fdd6c5f5d3772a7073c78335ac1e242f9256"
+                      href="https://dexscreener.com/ethereum/0x54a271526109a7a6e2ef6f1cffdbca714ad4d5a5"
                       type="button"
                       aria-hidden="false"
                       tabindex="0"
@@ -1984,7 +1984,7 @@
 
                     </style>
                     <a
-                      href="https://dexscreener.com/ethereum/0x6436fdd6c5f5d3772a7073c78335ac1e242f9256"
+                      href="https://etherscan.io/address/0x54a271526109a7a6e2ef6f1cffdbca714ad4d5a5"
                       type="button"
                       aria-hidden="false"
                       tabindex="0"
@@ -2098,7 +2098,7 @@
                       ><a
                         type="a"
                         class="css-sryjtv ea31a6i4"
-                        href="https://x.com"
+                        href="https://x.com/r0lex_coin"
                         aria-hidden="false"
                         tabindex="0"
                         style="--m: 0"
@@ -5923,7 +5923,7 @@
                     }
                   }
                 </style>
-                <p class="css-1gtbovk e1qte5p42">Next</p>
+                <p class="css-1gtbovk e1qte5p42">CA : 0x54a271526109a7a6e2ef6f1cffdbca714ad4d5a5</p>
                 <style data-emotion="css dvkgwv">
                   .css-dvkgwv {
                     font-weight: 700;
