--- a/index.html
+++ b/index.html
@@ -1932,7 +1932,7 @@
 
                     </style>
                     <a
-                      href="https://dexscreener.com/ethereum/0x54a271526109a7a6e2ef6f1cffdbca714ad4d5a5"
+                      href="https://dexscreener.com/base/0x2D93b2a9d2095bE883004E7b2a3993f3d99626C2"
                       type="button"
                       aria-hidden="false"
                       tabindex="0"
@@ -1984,7 +1984,7 @@
 
                     </style>
                     <a
-                      href="https://etherscan.io/address/0x54a271526109a7a6e2ef6f1cffdbca714ad4d5a5"
+                      href="https://basescan.org/address/0x2d93b2a9d2095be883004e7b2a3993f3d99626c2"
                       type="button"
                       aria-hidden="false"
                       tabindex="0"
@@ -4620,7 +4620,7 @@
               class="page-title-block padding-top-m-pos padding-bot-m-pos css-1tjv18r e176lxx40"
             >
               <p class="y23y3t">the first luxury memecoin</p>
-              <h1>R0LEX</h1>
+              <h1>$R0LX</h1>
             </header>
             <!--/$--><!--$--><style data-emotion="css a1o96v">
               .css-a1o96v {
@@ -5061,13 +5061,12 @@
                   }
                 </style>
                 <p class="css-tb98gi paragraph css-zpmiy6 e99ls330" style="text-align: center;">
-                  <b>0/0 Tax. <br> Fair Launch. <br> Contract Renounced. <br>90% Tokens Locked in LP.<br>10% for Marketing and KOLs</b>
+                  <b>0/0 Tax. <br> Fair Launch. <br> Contract Renounced. <br>100% Tokens Locked in LP.</b>
                 </p>
                 <p class="css-tb98gi paragraph css-zpmiy6 e99ls330">
-                  The first luxury memecoin to be launched on Ethereum, R0lex attests 
+                  The first luxury memecoin to be launched on $BASE, R0lex attests 
                   to the superlative standards of both quality and performance which every 
-                  single Rolex watches hold. The contract is audited and safe with 0/0 taxes 
-                  right from the launch ensuring a fair launch. And yes, just like the name,
+                  single Rolex watches hold. The contract is audited and safe ensuring a fair launch. And yes, just like the name,
                   this website is created as a direct ode to the watchmaking skills of the 
                   original Rolex site itself. If you are reading this fine print, rest assured you
                   would have gone through rest of the hints as to what is coming next. One of its kind, 
@@ -5893,7 +5892,7 @@
                   pointer-events: none;
                 }</style
               ><a
-                href="https://app.uniswap.org/swap"
+                href="https://app.uniswap.org/swap?chain=base&use=v2&outputCurrency=0x2d93b2a9d2095be883004e7b2a3993f3d99626c2"
                 /* uniswap*/
                 aria-label="Learn more"
                 class="e1qte5p43 css-13e8fxa eob9b3y0"
@@ -5923,7 +5922,7 @@
                     }
                   }
                 </style>
-                <p class="css-1gtbovk e1qte5p42">CA : 0x54a271526109a7a6e2ef6f1cffdbca714ad4d5a5</p>
+                <p class="css-1gtbovk e1qte5p42">CA : 0x2d93b2a9d2095be883004e7b2a3993f3d99626c2</p>
                 <style data-emotion="css dvkgwv">
                   .css-dvkgwv {
                     font-weight: 700;
